# bee

./: .appveyor.yml  .gitignore  .travis.yml  Makefile.am  README.md  TODO  appveyor.yml  bootstrap.conf  configure.ac
.github/workflows/: c-cpp.yml
build-aux/: .gitignore
m4/: .gitignore
mijit-bee/: Cargo.toml  build.rs  mijit-bee.h
mijit-bee/src/: lib.rs
mijit-bee/src/machine/: builder.rs  enums.rs  mod.rs  registers.rs
src/: .gitignore  Makefile.am  bee-dump  bee-dump.1  bee.h  bee.vapi  bee_aux.h  bee_debug.h  bee_opcodes.h  beei.1  beei.in  cmdline.h  completions.h  debug.c  debug.h  external_syms.h  extra.c  gdb-stub.c  gdb-stub.h  libbee.rc.in  loadobj.c  main.c  opcodes.h  private.h  private.h.in  registers.h  run.c  step.c  storage.c  tbl_commands.h  tbl_opts.h.in  tbl_registers.h  trap_glib.vala  trap_libc.c  traps.c  traps.h  vm.c
src/include/bee/: aux.h  bee.h  bee.h.in  debug.h  opcodes.h  registers.h
tests/: .gitignore  Makefile.am  arithmetic.c  badobj1  badobj2  badobj3  branch.c  catch.c  comparison.c  constants.c  errors.c  exceptions.c  extra_instructions.c  hello.S  hello.txt  init.c  jump.c  literals.c  load_object.c  logic.c  memory.c  registers.c  run.c  single_step.c  stack.c  testobj1  testobj1-le  testobj2  testobj2-be  testobj2-le  testobj3  tests.h  traps.c  util.c  util.h
